# ethobot

./: .gitignore  CLAUDE.md  README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PLAN.md
src/ethobot_algorithms/: CMakeLists.txt  README.md  package.xml
src/ethobot_algorithms/config/: pso_params.yaml
src/ethobot_algorithms/include/ethobot_algorithms/: pso_solver.hpp
src/ethobot_algorithms/launch/: pso_demo.launch.py
src/ethobot_algorithms/rviz/: pso_demo.rviz
src/ethobot_algorithms/src/: pso_path_planning_node.cpp  pso_solver.cpp  swarm_visualizer_node.cpp
src/ethobot_core/: CMakeLists.txt  README.md  package.xml
src/ethobot_core/include/ethobot_core/: algorithm_base.hpp
src/ethobot_core/src/: algorithm_base.cpp
src/ethobot_interfaces/: CMakeLists.txt  README.md  package.xml
src/ethobot_interfaces/action/: RunOptimization.action
src/ethobot_interfaces/msg/: AlgorithmStatus.msg  ParticleState.msg  RobotState.msg  SwarmCommand.msg  SwarmState.msg
src/ethobot_interfaces/srv/: GetMetrics.srv  SetAlgorithmParams.srv  SpawnRobot.srv
src/ethobot_robots/: CMakeLists.txt  README.md  package.xml
src/ethobot_robots/include/ethobot_robots/: robot_controller.hpp
src/ethobot_robots/src/: robot_controller.cpp  waypoint_follower_node.cpp
src/ethobot_simulation/: CMakeLists.txt  README.md  package.xml
src/ethobot_simulation/launch/: gazebo_pso_demo.launch.py  turtlebot3_pso.launch.py
src/ethobot_simulation/worlds/: ethobot_world.sdf
